feat: login button disable by default

--- a/src/app/features/auth/login/login.component.css
+++ b/src/app/features/auth/login/login.component.css
@@ -28,6 +28,12 @@
     width: 45%;
 }
 
+#login-button:disabled{
+    background-color: #aeafaf;
+    color: rgb(25, 25, 25);
+    width: 45%;
+}
+
 #registerBtn{
     background-color: white ;
     color: #007EA8;
