--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -48,7 +48,7 @@
         </mat-form-field>
 
         <div class="full-width">
-          <mat-slide-toggle class="login" formControlName="rememberMe">Ricordami</mat-slide-toggle>
+          <mat-slide-toggle class="login" formControlName="rememberMe" id="remember">Ricordami</mat-slide-toggle>
         </div>
       </mat-card-content>
       <div class="right-container">
