--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -71,7 +71,7 @@
         </mat-form-field>
 
         <div class="full-width register">
-          <mat-slide-toggle formControlName="rememberMe"
+          <mat-slide-toggle formControlName="rememberMe" id="remember"
             >Ricordami</mat-slide-toggle
           >
         </div>
