--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -82,6 +82,7 @@
         <button
         mat-button
           id="register-button"
+          [disabled]="registerForm.invalid || loading"
           (click)="register()">
           Registrati
         </button>
