--- a/src/app/features/user-info/profile-details/profile-details.component.css
+++ b/src/app/features/user-info/profile-details/profile-details.component.css
@@ -2,3 +2,9 @@
     text-align: center;
     color: white;
 }
+.circular-image {
+      width: 150px;  /* Imposta la larghezza desiderata */
+      height: 150px; /* Imposta l'altezza desiderata */
+      border-radius: 50%;
+      object-fit: cover; /* Assicura che l'immagine riempia il contenitore */
+    }
