--- a/src/app/features/user-info/profile-details/profile-details.component.html
+++ b/src/app/features/user-info/profile-details/profile-details.component.html
@@ -1,9 +1,10 @@
 <div class="profile-card">
-  <img src="assets/images/user.png" [alt]="fullName">
+  <img
+    src="https://cataas.com/cat?width=200&height=200"
+    class="circular-image"
+    [alt]="fullName" />
 
   <h2 class="title">
-    {{fullName}}
+    {{ fullName }}
   </h2>
-
-
 </div>
