feat: added trump and score in game page

--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -95,6 +95,14 @@
   .normal-text{
     margin-top: 0;
   }
+
+
+}
+
+.game-text{
+  margin: 0 0 1% 0;
+  font-weight: bold;
+  padding: 0;
 }
 
 @media (min-width: 516px) and (max-width: 600px){
