--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -20,10 +20,16 @@
       <span class="second-team">Fede</span></ng-template>
     </mat-tab>
   </mat-tab-group> -->
-  <p class="normal-text">
+  <p class="game-text">
     Ê il turno di:
     {{ this.currentUser }}
   </p>
+  <p class="game-text">
+    La briscola è:
+    {{ this.selectedTrump }}
+  </p>
+  <p class="game-text">Punteggio Team A: </p>
+  <p class="game-text">Punteggio Team B: </p>
 
   <div id="table">
     <div class="game-buttons">
