feat: cards on table

--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -26,7 +26,7 @@
   </p>
   <p class="game-text">
     La briscola è:
-    {{ this.selectedTrump }}
+    {{ this.trumpChoosen }}
   </p>
   <p class="game-text">Punteggio Team A: </p>
   <p class="game-text">Punteggio Team B: </p>
