feast: some more visuals in FE

--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -26,10 +26,10 @@
   </p>
   <p class="game-text">
     La briscola è:
-    {{ this.trumpChoosen }}
+    {{ this.currentTrump }}
   </p>
-  <p class="game-text">Punteggio Team A: </p>
-  <p class="game-text">Punteggio Team B: </p>
+  <p class="game-text">Punteggio Team A: {{ this.teamScoreA }}</p>
+  <p class="game-text">Punteggio Team B: {{ this.teamScoreB }}</p>
 
   <div id="table">
     <div class="game-buttons">
