--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -1,9 +1,9 @@
 <div class="game">
   <div class="players-name">
-    <p id="first-selected">Sofi</p>
-    <p>Matte</p>
-    <p>Klev</p>
-    <p id="second-selected">Fede</p>
+    <p id="first-selected">{{teamA[0]}}</p>
+    <p>{{teamB[0]}}</p>
+    <p>{{teamA[1]}}</p>
+    <p id="second-selected">{{teamB[1]}}</p>
   </div>
 
   <!-- <mat-tab-group  id="tab-names">
