--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -29,14 +29,14 @@
   border-bottom: solid 2.5px #00a3f5; /*63CCCA*/
 }
 
-#first-selected{
+.first-selected{
   background-color: #00a3f5;
   color: black;
   border-radius: 4px;
   border: 1px solid #a8a8a8;
 }
 
-#second-selected{
+.second-selected{
   background-color: #f19a3e;
   color: black;
   border-radius: 4px;
