feat: design of ultima presa

--- a/src/app/features/icons/icons/icons.component.html
+++ b/src/app/features/icons/icons/icons.component.html
@@ -1,16 +1,12 @@
-<div class="container" fxLayout="row" fxLayoutAlign="center none">
-    <div fxFlex="95%">
-
-        <mat-card>
-            <mat-card-content>
-                <h2>Icons</h2>
-
-                <iframe src="https://design.google.com/icons/">
-                    <p>Your browser does not support iframes.</p>
-                </iframe>
-
-            </mat-card-content>
-        </mat-card>
-
-    </div>
-</div>
+<h2 mat-dialog-title>Ultima presa</h2>
+<mat-dialog-content>
+  <div class="image-gallery">
+    <img src="assets/images/cards/COINS/1.jpg" alt="Image 1">
+    <img src="assets/images/cards/CUPS/1.jpg" alt="Image 2">
+    <img src="assets/images/cards/CLUBS/1.jpg" alt="Image 3">
+    <img src="assets/images/cards/SWORDS/1.jpg" alt="Image 4">
+  </div>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Close</button>
+</mat-dialog-actions>
