--- a/src/app/features/icons/icons/icons.component.css
+++ b/src/app/features/icons/icons/icons.component.css
@@ -1,4 +1,34 @@
-iframe {
-    width: 100%;
-    height: 650px;
-}
+.image-gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 10px;
+    text-align: center;
+  }
+  
+  .image-gallery img {
+    width: 72%;
+    height: auto; 
+    object-fit: cover;
+    border-radius: 10px;
+    border: solid 1px #9c9b9b;
+    margin: 0 10%;
+  }
+
+  h2{
+    text-align: center;
+    margin-bottom: 5% !important;
+  }
+  
+  /* Additional styles to ensure no scrollbar is shown */
+  .mat-dialog-content {
+    overflow: hidden; /* Hide scrollbar */
+  }
+  
+  .mat-dialog-content::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+  }
+  
+  .mat-dialog-content {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
