feat: backend ultima presa

--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -1,6 +1,6 @@
 <div class="game">
   <div class="players-name">
-    <p [ngClass]="getClass(0)">{{teamA[0]}} {{turn}}</p>
+    <p [ngClass]="getClass(0)">{{teamA[0]}}</p>
     <p [ngClass]="getClass(1)">{{teamB[0]}}</p>
     <p [ngClass]="getClass(2)">{{teamA[1]}}</p>
     <p [ngClass]="getClass(3)">{{teamB[1]}}</p>
