--- a/src/app/features/icons/icons/icons.component.html
+++ b/src/app/features/icons/icons/icons.component.html
@@ -1,10 +1,10 @@
 <h2 mat-dialog-title>Ultima presa</h2>
 <mat-dialog-content>
-  <div class="image-gallery">
-    <img src="assets/images/cards/COINS/1.jpg" alt="Image 1">
-    <img src="assets/images/cards/CUPS/1.jpg" alt="Image 2">
-    <img src="assets/images/cards/CLUBS/1.jpg" alt="Image 3">
-    <img src="assets/images/cards/SWORDS/1.jpg" alt="Image 4">
+  <div class="image-gallery" > 
+    <img src="{{data[0]}}" alt="{{data[0]}}">
+    <img src="{{data[1]}}" alt="{{data[1]}}">
+    <img src="{{data[2]}}" alt="{{data[2]}}">
+    <img src="{{data[3]}}" alt="{{data[3]}}">
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
