fix: names too short

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -89,7 +89,7 @@
           <p mat-line> Partite </p>
         </a>
 
-        <a mat-list-item [routerLink]="['/account/profile']">
+        <a mat-list-item [routerLink]="['/userInfo']">
           <mat-icon mat-list-icon>person</mat-icon>
           <p mat-line> Account </p>
         </a>
@@ -142,7 +142,7 @@
         </mat-icon>
       </a>
 
-      <a mat-list-item [routerLink]="['/account/profile']" class="menu-item">
+      <a mat-list-item [routerLink]="['/userInfo']" class="menu-item">
         <mat-icon mat-list-icon>person</mat-icon>
       </a>
 
