--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -1,9 +1,14 @@
 <div class="game">
   <div class="players-name">
+    <mat-icon mat-list-icon class="star">star</mat-icon>
     <p [ngClass]="getClass(0)">{{teamA[0]}}</p>
+    <mat-icon mat-list-icon class="star">star</mat-icon>
     <p [ngClass]="getClass(1)">{{teamB[0]}}</p>
+    <mat-icon mat-list-icon class="star">star</mat-icon>
     <p [ngClass]="getClass(2)">{{teamA[1]}}</p>
+    <mat-icon mat-list-icon class="star">star</mat-icon>
     <p [ngClass]="getClass(3)">{{teamB[1]}}</p>
+   <mat-icon mat-list-icon class="star">star</mat-icon>
   </div>
 
   <!-- <mat-tab-group  id="tab-names">
