--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -346,10 +346,49 @@
   color: black;
 }
 
-
-
 .hand-card {
   margin: 1%;
   border-radius: 10px;
   border: solid 1px #9c9b9b;
+}
+
+#info-box{
+  position: fixed;
+  top: 100px;
+  right: 20px;
+  background-color: #277E96;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  opacity: 1;
+  width: fit-content;
+  transform: translateY(-20px);
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+}
+
+#info-box p{
+  margin-right: 1%;
+  color: white;
+}
+
+.notification.ng-enter {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.notification.ng-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.notification.ng-leave {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.notification.ng-leave-active {
+  opacity: 0;
+  transform: translateY(-20px);
 }
