feat: chat dammit css

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -112,6 +112,9 @@
                 cols="70"
                 placeholder="  Scrivi un nuovo messaggio"></textarea>
             </div>
+            <app-chat>
+
+            </app-chat>
           </div>
           <div class="games-container">
             <h2 class="lightblue-text">Partite:</h2>
