--- a/src/app/features/chat/chat.component.css
+++ b/src/app/features/chat/chat.component.css
@@ -1,4 +1,97 @@
-/* Layout Styles */
+
+.chat-message {
+  margin-bottom: 20px;
+  padding: 10px; 
+  border-radius: 5px; 
+  background-color: #f0f0f0; 
+}
+
+#chat-button{
+  width: 32px;
+  height: 32px;
+  background-color: #0163a1;
+  border-radius: 0 5px 5px 0;
+  padding: 0;
+  border: 0;
+}
+
+#chat-button:hover{
+  background-color: #014f7c;
+}
+
+#send{
+  width: 20px;
+  height: 20px;
+  margin-top: 3px;
+}
+
+#messageInput{
+  height: 28px;
+  width: 100%;
+  margin: 0;
+  border-radius: 5px 0 0 5px;
+  border: 1px solid #6d6d6d;
+  outline: none;
+  color: #929db4;
+  background-color: #f7f9fc;
+}
+
+#messageInput:focus{
+  border: 1px solid #0163a1;
+  border-radius: 5px 0 0 5px;
+  color: black;
+}
+
+::ng-deep .chat-form{
+  background-color: #f4f8fb !important;
+  border-radius: 5px;
+  margin:5%;
+}
+
+
+#form-mess{
+  display: flex;
+  align-items: center;
+}
+
+.header{
+  background-color: #0163a1 !important;
+  border-radius: 5px 5px 0 0;
+  color: white; 
+  padding: 10px; 
+  text-align: center; 
+}
+
+.content{
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  border-radius: 0 0 5px 5px;
+  flex: 1; 
+  overflow-y: auto; 
+  padding: 20px; 
+}
+
+.layout{
+  width: 75%;
+  margin: 3% 12.5% 0 12.5%;
+  display: flex;
+  flex-direction: column;
+  height: 50vh; 
+}
+
+@media (min-width: 1200px) {
+  .layout{
+    height: 40vh;
+  }
+}
+
+@media (max-width: 500px) {
+  .layout{
+    width: 100%;
+    margin: 3% 0 0 0;
+  }
+}
+
+
 nb-layout {
   display: flex;
   flex-direction: column;
