fix: shows trump

--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -33,7 +33,7 @@
   </p>
   <p class="game-text">
     La briscola è:
-    {{ this.currentTrump }}
+    {{ this.trumpChoosen }}
   </p>
   <p class="game-text">Punteggio Team A: {{ this.teamScoreA }}</p>
   <p class="game-text">Punteggio Team B: {{ this.teamScoreB }}</p>
