--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -202,7 +202,12 @@
 
 #chat{
   --color: #FFB01F;
+}
 
+
+.game-chat{
+  position: fixed;
+  right: 0;
 }
 
 .game-button{
@@ -363,7 +368,7 @@
 #info-box{
   position: fixed;
   top: 100px;
-  right: 20px;
+  left: 20px;
   background-color: #277E96;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
