--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -18,7 +18,9 @@
         <div
           class="col-12 text-center fill-viewport-max-20 dashboard-container">
           <div class="vertical-container text-center">
-            <h2 id="select-game-mode" class="lightblue-text">Seleziona una modalità di gioco:</h2>
+            <h2 id="select-game-mode" class="lightblue-text">
+              Seleziona una modalità di gioco:
+            </h2>
             <form [formGroup]="formMode">
               <div class="radio-button">
                 <input
@@ -125,8 +127,14 @@
               <button mat-flat-button class="orange-button"><mat-icon
                   class="playing">fiber_manual_record</mat-icon>game2</button> -->
             </div>
-            <h2 class="lightblue-text">Giocatori:</h2>
-            <h4 class="text">Sofy<br />Matte<br /></h4>
+            <h2 class="lightblue-text">Giocatori connessi:</h2>
+
+            <h4 class="text" *ngFor="let user of this.players">{{ user }}</h4>
+            <!-- <h4 class="text">Sofy<br />Matte<br /></h4> -->
+            <h2 class="lightblue-text">Giocatori impegnati:</h2>
+            <h4 class="text" *ngFor="let user of this.activePlayers">
+              {{ user }}
+            </h4>
           </div>
           <!--delete <button class="btn btn-primary my-3" ngbDropdownToggle> Nuova Partita</button> -->
           <!--<h5 class="dropdown-header">2 giocatori</h5>
@@ -149,7 +157,8 @@
         </div>
 
         <div class="col-12 text-center small fill-viewport-max-30">
-          <a id="donation"
+          <a
+            id="donation"
             class="orange-button"
             mat-flat-button
             href="donazione.html"
